<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.infoclinika</groupId>
    <artifactId>mssharing</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>lib</module>
        <module>chorus</module>
        <module>clients</module>
        <module>data-management</module>
    </modules>

    <properties>
        <infoclinika.analysis.version>1.0.26</infoclinika.analysis.version>
        <infoclinika.workflow.version>1.0-SNAPSHOT</infoclinika.workflow.version>
        <spring.version>4.3.18.RELEASE</spring.version>
        <spring.data.version>1.8.0.RELEASE</spring.data.version>
        <spring.security.version>4.2.4.RELEASE</spring.security.version>
        <spring.amqp.version>1.4.5.RELEASE</spring.amqp.version>
        <!-- Using the 4.1.3 due to bugs in 4.1.8 https://community.jboss.org/message/778294?_sscc=t -->
        <hibernate.version>4.3.8.Final</hibernate.version>
        <hibernate.search.version>4.2.0.Final</hibernate.search.version>
        <httpclient.version>4.3.6</httpclient.version>


        <jackson.version>2.8.11</jackson.version>
        <jackson.databind.version>2.8.11.2</jackson.databind.version>
        <jackson.annotations.version>2.8.11</jackson.annotations.version>
        <jdk.version>1.8</jdk.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <guava.version>18.0</guava.version>
        <dm.version>1.0-SNAPSHOT</dm.version>
        <cxf.version>3.0.5</cxf.version>
        <amazon.sdk.version>1.9.39</amazon.sdk.version>

        <junit.version>4.8.2</junit.version>
        <baseDir>${project.basedir}</baseDir>
        <derby.system.home>${baseDir}/common/target/derby</derby.system.home>

        <log4j.version>1.2.17</log4j.version>
        <data-management.version>1.0-SNAPSHOT</data-management.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.4</version>
            </dependency>
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>6.1.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.8.2</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${spring.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-all</artifactId>
                <version>1.9.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.javassist</groupId>
                <artifactId>javassist</artifactId>
                <version>3.18.1-GA</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>${httpclient.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.databind.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>2.0.1</version>
        </dependency>
        <!--logging-->
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <!--injection-->
        <dependency>
            <groupId>javax.inject</groupId>
            <artifactId>javax.inject</artifactId>
            <version>1</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
    </dependencies>


    <build>
        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.4</version>
                <inherited>false</inherited>
                <configuration>
                    <descriptors>
                        <descriptor>opensource/assembly.xml</descriptor>
                    </descriptors>
                    <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
